# data_pipelines

./: .gitignore  README.md  pyproject.toml
scripts/: extract_mysql_full.py
scripts/rest_api/: extract_rest.py
