[tool.poetry]
name = "data-pipelines"
version = "0.1.0"
description = ""
authors = ["Levy Nunes <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
boto3 = "^1.34.14"
urllib3 = "^1.25"
configparser = "^6.0.0"
pandas = "^2.1.4"
pymysql = "^1.1.0"
black = "^23.12.1"
ruff = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
